--- a/src/app/views/shared/entity-mapping/entity-mapping.component.css
+++ b/src/app/views/shared/entity-mapping/entity-mapping.component.css
@@ -1,5 +1,5 @@
 :host/deep/.list-tasktype::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
     background-color: #F5F5F5;
 }
 :host/deep/.list-tasktype::-webkit-scrollbar-thumb {
@@ -38,7 +38,17 @@ mat-card-title {
     padding-bottom :14px;
     margin-bottom: -14px !important;
 }
-
 mat-nav-list {
     padding-top: 0px;
+}
+.selected {
+    background: whitesmoke;
+}
+:host/deep/mat-sidenav-content {
+    background: whitesmoke;
+}
+:host/deep/mat-card.drawer {
+    box-shadow: none !important;
+    background: whitesmoke !important;
+    margin-top: -20px;
 }
