Distributor-add component updated

--- a/src/app/views/distributor/distributor-add/distributor-add.component.html
+++ b/src/app/views/distributor/distributor-add/distributor-add.component.html
@@ -1,3 +1,5 @@
-<p>
-  distributor-add works!
-</p>
+<app-configuration
+	[isLinear]="isLinear"
+	[steps]="steps"
+	(onConfigSubmit)=onSubmit($event)>
+</app-configuration>
