Simple datatable parameters added

--- a/src/app/views/configuration/price-list/price-list/price-list.component.html
+++ b/src/app/views/configuration/price-list/price-list/price-list.component.html
@@ -1,5 +1,9 @@
 <app-simple-datatable
 	*ngIf="loadingCompleted"
+	[isSearchable]="true"
+	[isMultiSelect]="true"
+	[isEditable]="true"
+	[isDeletable]="true"
 	[rows]="rows"
 	[columns]="columns"
 	[formElements]="formElements"
